--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -334,6 +334,7 @@ header .fixed {
     top: 0;
     display: inline-block;
     text-align: center;
+    border-bottom: 1px solid #bbb;
 }
 
 header .fixed-box {
