--- a/src/main/webapp/lib/fade-slider/slider.css
+++ b/src/main/webapp/lib/fade-slider/slider.css
@@ -636,7 +636,7 @@
         left: 30px;
     }
     .text-slider .slick-slide {
-        width: 100%;
+        /* width: 100%; */
     }
     .slick-slider {
         width: 100%;
@@ -767,6 +767,9 @@
     section.left-fade-slider-container .img {
         background-size: contain;
         height: 172px;
+    }
+    .left-fade-slider-container .max-layout-width h2 br {
+        display: none;
     }
     .left-fade-slider-container .max-layout-width h2 {
         font-size: 26px;
