--- a/src/main/webapp/css/tooth/general.css
+++ b/src/main/webapp/css/tooth/general.css
@@ -445,6 +445,7 @@
     font-size: 35px;
     margin-bottom: 46px;
     letter-spacing: -2px;
+    line-height: 1.3;
 }
 
 .section03 .table tr {
@@ -748,7 +749,7 @@
 }
 
 .tab-container3 .section12 .section-title {
-    margin-bottom: 26px;
+    margin-bottom: 226px;
 }
 
 .section12 .section-text {
@@ -1060,4 +1061,345 @@ section.board-link {
 
 .fade-in-slider .slider-prev {
     background: #ffffff url(../../images/sub/implant/digital/left_arrow01.png) no-repeat center;
+}
+
+@media screen and (max-width: 1300px) {
+    .section03 {
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .tab-container3 .section04 {
+        margin-top: 50px;
+    }
+
+    .section06 .max-layout-width .text h2 br {
+        display: none;
+    }
+    .section06 .max-layout-width .text h2 {
+        padding: 0 30px;
+        padding-top: 50px;
+    }
+    .section06 {
+        margin-top: 130px;
+        padding-bottom: 70px;
+        margin-bottom: -10px;
+    }
+    .section11 .section-title,
+    .section12 .section-title {
+        margin-bottom: 400px;
+    }
+    .section11 .text > div,
+    .section12 .text > div {
+        padding-left: 30px;
+    }
+    .section11 .bg,
+    .section12 .bg {
+        width: 100%;
+    }
+    .section11 .text,
+    .section12 .text {
+        padding-left: 0;
+    }
+    .tab-container3 .section12 .img {
+        background-size: contain;
+    }
+    .section11 .image_box_left,
+    .section12 .image_box_left {
+        width: 100%;
+        height: 340px;
+        top: 100px;
+    }
+    .fade-in-slider .slider-next {
+        left: 117px;
+    }
+    .fade-in-slider .slider-prev:before {
+        background: #444;
+    }
+    .fade-in-slider .slick-arrow {
+        background-color: #f5f5f5;
+    }
+    .fade-in-slider .scroll-bar {
+        top: 515px;
+    }
+    .fade-in-slider {
+        margin-top: 0px;
+    }
+    .fade-in-slider {
+        background: none;
+    }
+    .section20 .max-layout-width .text h2 {
+        padding: 0 30px;
+        box-sizing: border-box;
+        word-break: keep-all;
+    }
+    .section20 .max-layout-width .text h2 br {
+        display: none;
+    }
+    .section20 {
+        padding-bottom: 30px;
+    }
+    .section05 .text h2 + p {
+        padding-right: 30px;
+    }
+    .section05 .img-tab {
+        width: 100%;
+        padding: 0 30px;
+        left: 0;
+        margin-left: -2%;
+        bottom: 0;
+    }
+    .section05 .img-contents > div img {
+        width: 100%;
+    }
+    .section05 .text > div {
+        padding-left: 30px;
+    }
+    .section05 .text h2 {
+        padding-top: 0px;
+    }
+    .section05 .text h2:before {
+        display: none;
+    }
+    .section05 .text:before {
+        display: none;
+    }
+    .section05 .img-contents > div {
+        float: none;
+        width: 100%;
+    }
+    .section03 .table td {
+        font-size: 13px;
+    }
+    .section03 .table {
+        width: 640px;
+    }
+    .section03 .table .table-title th {
+        font-size: 16px;
+    }
+    .section03 .table td:first-child {
+        font-size: 16px;
+    }
+    .section02-1 .tab-contents img + div {
+        width: 100%;
+        padding-left: 0;
+        padding-top: 50px;
+    }
+    .section02-1 .tab-contents img + div h2,
+    .section02-1 .tab-contents img + div p {
+        text-align: center;
+    }
+    .section02-1 .tab-contents li {
+        padding: 0 30px;
+    }
+    .section02-1 .tab-contents img {
+        width: 100%;
+    }
+    .section05 .max-layout-width {
+        padding-bottom: 120px;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .section02 .section-title {
+        font-size: 32px;
+        word-break: keep-all;
+        box-sizing: border-box;
+    }
+    .section02 .section-text {
+        margin-top: 20px;
+        font-size: 14px;
+        padding: 0 30px;
+        word-break: keep-all;
+        box-sizing: border-box;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .tab-container3 .section12 .section-title {
+        margin-bottom: 230px;
+    }
+    .section12 .pager:before {
+        top: 6px;
+    }
+    .section12 .pager {
+        font-size: 14px;
+    }
+    .section06 .max-layout-width .text h2 {
+        padding-top: 10px;
+    }
+    .section11 .section-title,
+    .section12 .section-title {
+        margin-bottom: 260px;
+    }
+    .section11 .image_box_left,
+    .section12 .image_box_left {
+        height: 220px;
+        top: 110px;
+    }
+    .section11 .section-title,
+    .section12 .section-title {
+        font-size: 32px;
+    }
+    .tab-container3 section.section-quotes-title-right .bg {
+        height: 227px;
+    }
+    .tab-container2 section.section-quotes-title-right .bg {
+        height: 227px;
+    }
+    .fade-in-slider .swiper-container {
+        height: 600px;
+    }
+    .fade-in-slider .scroll-bar {
+        top: 401px;
+    }
+    .left-fade-slider-container {
+        margin: 0;
+        padding-top: 70px;
+    }
+    .left-fade-slider-container {
+        background: #f3f3f3;
+    }
+    .left-fade-slider-container .max-layout-width h2 {
+        margin-bottom: 20px;
+    }
+    .section20 .max-layout-width .text {
+        padding-top: 100px;
+    }
+    .section05 .max-layout-width {
+        padding-bottom: 80px;
+    }
+    .section05 .text li h3 {
+        font-size: 16px;
+    }
+    .section05 .text p {
+        font-size: 14px;
+    }
+    .section05 .text li {
+        height: 90px;
+        padding-top: 27px;
+    }
+    .section04 .max-layout-width .text > div {
+        padding-right: 30px;
+    }
+    section.section-quotes-title-right .bg {
+        height: 200px;
+    }
+    section.section-quotes-title-right .max-layout-width .text {
+        padding-top: 190px;
+    }
+    section.section-quotes-title-right .image_box_right {
+        height: 140px;
+    }
+
+    .tab-container1 .section04 .image_box_right .img,
+    .tab-container2 .section04 .image_box_right .img,
+    .tab-container3 .section04 .image_box_right .img {
+        background-size: contain;
+    }
+    .section03 h2 {
+        font-size: 28px;
+    }
+    .section02 .section-title {
+        font-size: 29pxz;
+    }
+    section.section-top-title-left {
+        padding-bottom: 100px;
+    }
+    section.section-top-title-left .image_box_left {
+        height: 163px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .section06 .max-layout-width .text h2 {
+        padding-top: 0px;
+    }
+    .section11 .section-title,
+    .section12 .section-title {
+        margin-bottom: 240px;
+    }
+    .section11 .image_box_left,
+    .section12 .image_box_left {
+        height: 190px;
+    }
+    .section12 .image_box_left {
+        height: 175px;
+        top: 120px;
+    }
+    .section11 .section-title,
+    .section12 .section-title {
+        font-size: 28px;
+    }
+    .tab-container3 section.section-quotes-title-right .bg {
+        height: 227px;
+    }
+    .tab-container2 section.section-quotes-title-right .bg {
+        height: 227px;
+    }
+    .fade-in-slider .swiper-container {
+        height: 540px;
+    }
+    .fade-in-slider .scroll-bar {
+        top: 401px;
+    }
+    .section20 .max-layout-width .text {
+        padding-top: 70px;
+    }
+    .section05 .text h2 {
+        font-size: 27px;
+    }
+    section.section-quotes-title-right .bg {
+        height: 200px;
+    }
+    section.section-quotes-title-right .max-layout-width .text {
+        padding-top: 180px;
+    }
+    section.section-quotes-title-right .image_box_right {
+        height: 129px;
+    }
+    .section02 .section-title {
+        font-size: 28px;
+    }
+    section.section-top-title-left {
+        padding-bottom: 70px;
+    }
+    section.section-top-title-left .image_box_left {
+        height: 150px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .tab-container3 section.section-quotes-title-right .bg {
+        height: 238px;
+    }
+    .tab-container2 section.section-quotes-title-right .bg {
+        height: 240px;
+    }
+    .fade-in-slider .swiper-container {
+        height: 540px;
+    }
+    .fade-in-slider .scroll-bar {
+        top: 390px;
+    }
+    section.section-quotes-title-right .bg {
+        height: 190px;
+    }
+    section.section-quotes-title-right .max-layout-width .text {
+        padding-top: 180px;
+    }
+    section.section-quotes-title-right .image_box_right {
+        height: 122px;
+    }
+    .section02 .section-title {
+        font-size: 27px;
+    }
+    section.section-top-title-left {
+        padding-bottom: 80px;
+    }
+    section.section-top-title-left .image_box_left {
+        height: 143px;
+    }
 }
