--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -1,3 +1,9 @@
+.header-logo img {
+    width: 160px;
+}
+.header-member a img {
+    width: 19px;
+}
 header {
     position: fixed;
     width: 100%;
@@ -115,7 +121,7 @@ header .header-banner-slider-continer .bx-wrapper {
 }
 
 .login-nav img {
-    margin-top: 3px;
+    /* margin-top: 3px; */
     margin-bottom: 2px;
 }
 
