--- a/src/main/webapp/css/clientFooter.css
+++ b/src/main/webapp/css/clientFooter.css
@@ -109,6 +109,8 @@
 
 .footer {
     padding: 30px 0;
+    background: #24201f;
+    border-top: 1px solid #747474;
 }
 
 .footer .max-layout-width {
@@ -131,6 +133,7 @@
     display: block;
     padding: 0 23px;
     font-size: 13px;
+    color: #fff;
 }
 
 .footer-link li:before {
