--- a/src/main/webapp/css/clientFooter.css
+++ b/src/main/webapp/css/clientFooter.css
@@ -25,7 +25,7 @@
 }
 
 .footer-info-container li p {
-    font-size: 15px;
+    font-size: 14px;
     margin-bottom: 10px;
     color: #cacaca;
     letter-spacing: -1px;
@@ -149,6 +149,10 @@
 
 .footer-link li:first-child:before {
     content: none;
+}
+
+.footer .footer-location {
+    float: right;
 }
 
 .footer-location {
